[gd_scene load_steps=9 format=2]

[ext_resource path="res://Hurt and Hit box/Hitbox.gd" type="Script" id=1]
[ext_resource path="res://Bullets/bullet.png" type="Texture" id=2]
[ext_resource path="res://Bullets/laserBullet/lineBullet.gd" type="Script" id=3]
[ext_resource path="res://Bullets/BulletStats.tres" type="Resource" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 2 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.5
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.17
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Bullet" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
stats = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3
monitoring = false
audio_bus_name = "SFX"
script = ExtResource( 1 )
damage = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Hitbox")
anims/RESET = SubResource( 6 )
anims/hit = SubResource( 5 )
anims/move = SubResource( 4 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="ImpactsDetectorMiddle" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 3

[node name="ImpactsDetectorTop" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( 8, -2 )
collision_mask = 3

[node name="ImpactsDetectorButtom" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( 8, 2 )
collision_mask = 3
